# MAVProxy-mcp

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/mavproxy_mcp/: __init__.py  server.py  simple_server.py
tests/: __init__.py  test_server.py
